--- a/.tekton/source-repository.yaml
+++ b/.tekton/source-repository.yaml
@@ -2,5 +2,7 @@ apiVersion: "pipelinesascode.tekton.dev/v1alpha1"
 kind: Repository
 metadata:
   name: test-sb-app-repository
+  labels:
+    foo: bar
 spec:
   url: https://github.com/dev-RHTAP-org/springboot-app
